# CodeEngine

./: .gitignore  CEDockerfile  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SKILL.md  app.py  cobrinha  codeengine.go  do-all  go.mod  hugo.toml  requirements.txt  run-all
acp-agents/: .gitignore  Makefile  README.md  container-compose.yml  pyproject.toml
acp-agents/agents/budget_planner_agent/: Dockerfile  README.md  agents.py  main.py  pyproject.toml  tasks.py
acp-agents/agents/city_expert_agent/: Dockerfile  README.md  agents.py  main.py
acp-agents/agents/city_selection_agent/: Dockerfile  README.md  agents.py  main.py  pyproject.toml  schemas.py  tasks.py
acp-agents/agents/city_selection_agent/classes/: task.py
acp-agents/agents/flight_planner_agent/: .env.example  Dockerfile  README.md  agents.py  main.py  pyproject.toml  tasks.py  tools.py
acp-agents/agents/hotel_planner_agent/: Dockerfile  README.md  agents.py  main.py  pyproject.toml  tasks.py
acp-agents/agents/itinerary_planner_agent/: Dockerfile  README.md  agents.py  main.py  pyproject.toml  tasks.py
acp-agents/agents/travel_concierge_agent/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  schemas.py  utils.py
acp-agents/agents/travel_concierge_agent/classes/: task.py
acp-agents/agents/travel_concierge_agent/sub_agents/: extract_agent.py
acp-agents/agents/travel_concierge_agent/tasks/: extract_travel_budget.py  extract_travel_destinations.py  extract_travel_origin.py  extract_travel_period.py  extract_traveler_interests.py  extract_traveler_preferences.py
acp-agents/clients/: budget-planner-agent.py  city-expert-agent.py  city-selection-agent.py  flight-planner-agent.py  hotel-planner-agent.py  itinerary-planner-agent.py  travel-concierge-agent.py
acp-agents/scripts/: deploy.sh  undeploy.sh
acp-agents/ui/chat/: .env.example  Dockerfile  README.md  config.json  main.py  pyproject.toml
acp-agents/ui/chat/utils/core/: __init__.py  chat.py  config.py
acp-agents/ui/chat/utils/design/: layout.py
acp-agents/ui/chat/utils/styles/: css.py
ai/: common.sh
ai/langchain-skills-agent/src/: .dockerignore  .gitignore  Dockerfile  README.md  agents.py  main.py  pyproject.toml  ruff.toml  skill_loader.py
ai/langchain-skills-agent/src/frontend/: __init__.py  landing_page.py
ai/langchain-skills-agent/src/skills/currency_converter/: __init__.py  skill.md
ai/langchain-skills-agent/src/tests/: test_agents.py  test_landing_page.py  test_main.py  test_skill_loader.py
app-n-event-notification/: README.md  (+4 more)
(+10938 files in other folders)
